src/objects/MT_MediaCampaignMonthlyPlan__c.object
<CustomObject>
    <description>Track monthly distribution of the volume for a campaign</description>
    <fields>
        <fullName>MT_BMVOverbooking__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hier kann im Businessplan das Overbooking- BMV eingetragen werden, zur Zeit wird diese Funktion nicht genutzt.</description>
        <label>BMV Overbooking</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BMVSponsoring__c</fullName>
        <description>Hier kann im Businessplan das Sponsoring- BMV eingetragen werden.</description>
        <label>BMV Sponsoring</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BMVSpot__c</fullName>
        <description>Hier kann im Businessplan das Spot- BMV eingetragen werden.</description>
        <label>BMV Spot</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BMVWeightedSpot__c</fullName>
        <description>Errechnet das wahrscheinliche BMV, das in diesem Monatsplan für Spots verwendet wird (Multiplikation Spot- BMV mit Wahrscheinlichkeit)</description>
        <formula>MT_Probability__c*MT_BMVSpot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV Weighted Spot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BarterRevenue__c</fullName>
        <description>Errechnet den Umsatz mit Barter für diesen Monatsplan aus dem eingetragenen BMV und dem Barter-Yield, der auf der Kampagne ermittelt wurde.</description>
        <formula>MT_TotalBMV__c * MT_MCamp_BarterYield__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barter Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Effective_AirTimeRate__c</fullName>
        <description>Zieht die Air-Time-Rate von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_AirTimeRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Air Time Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Effective_BarterYieldQuantifier__c</fullName>
        <description>Zieht den Gewichtungsfaktor für den Barter-Yield von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_BarterYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Barter Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_CoverageMarginII__c</fullName>
        <description>Zieht den Deckungsbeitrag II von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_CoverageMarginII__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective DeckungsbeitragII</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Effective_EquityYieldQuantifier__c</fullName>
        <description>Zieht den Gewichtungsfaktor für den Equity-Yield von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_EquityYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Equity Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_ExitParticipationYieldQuant__c</fullName>
        <description>Zieht den Gewichtungsfaktor für den Exit Participation-Yield von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_ExitParticipationYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Exit Participation Yield Quant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_FillUpYieldQuantifier__c</fullName>
        <description>Zieht den Gewichtungsfaktor für den Fill Up-Yield von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_FillUpYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Fill up Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_FixYieldQuantifier__c</fullName>
        <description>Zieht den Gewichtungsfaktor für den Fix-Yield von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_FixYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Fix Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_VariableYieldQuantifier__c</fullName>
        <description>Zieht den Gewichtungsfaktor für den Umsatzbeteiligungs-Yield von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_VariableYieldQuantifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Variable Yield Quantifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Effective_WKZFactor__c</fullName>
        <description>Zieht den WKZ-Faktor von der zugeordneten Kampagnentypparameterversion in dieses Objekt, um die abhängigen Formeln zu vereinfachen und in Reports auf einen Blick ersichtlich zu machen, welche Parameterwerte zum Tragen kommen.</description>
        <formula>MT_MediaCampaignTypeParameterVersion_ref__r.MT_WKZFactor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective WKZ Faktor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_Yield__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Speichert den ermittelten Fix-Yield. Je nach fixer Umsatzart auf der Kampagne ist das der auf der Kampagne berechnete Yield oder die Formel monatliches BMV / feste monatliche Zahlung.</description>
        <label>Yield Fix Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue__c</fullName>
        <description>Speichert den ermittelten fixen Umsatz für diesen Monat(splan). Kann entweder die eingetragene monatliche Zahlung von der Kampagne sein oder das Ergebnis von monatliches BMV * Fix Yield von der Kampagne.</description>
        <label>Fix Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MCamp_BarterYield__c</fullName>
        <description>Zieht den berechneten Barter-Yield von der Kampagne in dieses Objekt, um die abhängigen Formeln zu vereinfachen.</description>
        <formula>MT_MediaCampaign_ref__r.MT_BarterYield__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Barter Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaignTypeParameterVersion_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Die Referenz wird per Trigger (Erstellen des Monatsplans), bzw. Batchjob (Erstellen einer neuen Version) befüllt. An Hand des Datumsvergleichs suchen sich beide Stellen die für den Monat(splan) gültige Version und ordnen diese zu.</description>
        <label>Media Campaign Type Parameter Version</label>
        <referenceTo>MT_CampaignTypeParameterVersion__c</referenceTo>
        <relationshipLabel>Media Campaign Monthly Plans</relationshipLabel>
        <relationshipName>MT_MediaCampaignMonthlyPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaign_ref__c</fullName>
        <description>Die Kampagne, zu der der Monat(splan) gehört.</description>
        <label>Media Transparency Campaign</label>
        <referenceTo>MT_MediaCampaign__c</referenceTo>
        <relationshipLabel>Media Campaign Monthly Plans</relationshipLabel>
        <relationshipName>Media_Campaign_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_Month__c</fullName>
        <description>Zahldarstellung des Monats (ohne Jahr). Wird in Custom Seiten (Businessplan, Flightplan) in JS verwendet.</description>
        <formula>MONTH(MT_PlanningDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_NoOverbookingFlights__c</fullName>
        <description>Liefert die Anzahl an Overbooking-Flights, die diesem Monatsplan zugeordnet sind. Eine Validierungsregel verhindert, dass mehr als 5 zugeordnet werden.</description>
        <label>No of Overbooking Flights</label>
        <summaryFilterItems>
            <field>MT_MediaFlight__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Overbooking</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaFlight__c.MT_MediaBuildingBlockMonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_NoSponsoringFlights__c</fullName>
        <description>Liefert die Anzahl an Sponsoring-Flights, die diesem Monatsplan zugeordnet sind. Eine Validierungsregel verhindert, dass mehr als 20 zugeordnet werden.</description>
        <label>No of Sponsoring Flights</label>
        <summaryFilterItems>
            <field>MT_MediaFlight__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sponsoring</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaFlight__c.MT_MediaBuildingBlockMonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_NoSpotFlights__c</fullName>
        <description>Liefert die Anzahl an Spot-Flights, die diesem Monatsplan zugeordnet sind. Eine Validierungsregel verhindert, dass mehr als 5 zugeordnet werden.</description>
        <label>No of Spot Flights</label>
        <summaryFilterItems>
            <field>MT_MediaFlight__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Spot</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaFlight__c.MT_MediaBuildingBlockMonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_PlanningDate__c</fullName>
        <description>Der Monat, für den dieser Monatsplan gilt.</description>
        <label>Planning Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Probability__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Die Wahrscheinlichkeit, dass das Spot- BMV des Monats abgerufen wird.</description>
        <label>Probability</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_ROI_Revenue__c</fullName>
        <description>Der berechnete ROI Umsatz (monatliches BMV * WKZ- Faktor * ROI-Yield des Monats)</description>
        <formula>MT_TotalBMV__c *  MT_Effective_WKZFactor__c *  MT_ROI_Yield__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI_Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_ROI_Yield__c</fullName>
        <description>Der ROI-Yield für diesen Monat(splan). Wird manuell im Businessplan eingegeben.</description>
        <label>ROI Yield %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_SumBMV__c</fullName>
        <description>Cumulative sum of the BMV of broadcast data</description>
        <label>Sum of BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_SumOverbookingBMV__c</fullName>
        <description>Das ausgestrahlte Overbooking- Volumen in diesem Monat.</description>
        <label>Sum Overbooking BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryFilterItems>
            <field>MT_MediaBroadcastData__c.MT_BroadcastType__c</field>
            <operation>equals</operation>
            <value>Overbooking Order</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_SumSponsoringBMV__c</fullName>
        <description>Das ausgestrahlte Sponsoring- Volumen in diesem Monat.</description>
        <label>Sum Sponsoring BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryFilterItems>
            <field>MT_MediaBroadcastData__c.MT_BroadcastType__c</field>
            <operation>equals</operation>
            <value>Sponsoring Order</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_SumSpotBMV__c</fullName>
        <description>Das ausgestrahlte Spot- Volumen in diesem Monat.</description>
        <label>Sum Spot BMV</label>
        <summarizedField>MT_MediaBroadcastData__c.MT_BMV__c</summarizedField>
        <summaryFilterItems>
            <field>MT_MediaBroadcastData__c.MT_BroadcastType__c</field>
            <operation>equals</operation>
            <value>Spot Order</value>
        </summaryFilterItems>
        <summaryForeignKey>MT_MediaBroadcastData__c.MT_MonthlyPlan_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_TotalBMV__c</fullName>
        <description>Die Summe der geplanten BMVs (ohne Overbooking).</description>
        <formula>MT_BMVSponsoring__c + MT_BMVSpot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total BMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_TotalRevenue__c</fullName>
        <description>Die Summe aller Umsätze in diesem Monat(splan).</description>
        <formula>MT_FixRevenue__c + MT_VariableRevenue1_TotalRevenue__c + MT_VariableRevenue2_TotalRevenue__c + MT_VariableRevenue3_TotalRevenue__c + MT_VariableRevenue4_TotalRevenue__c + MT_VariableRevenue5_TotalRevenue__c + MT_BarterRevenue__c
/* @TODO Add missing revenue fields */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_TotalYield__c</fullName>
        <description>Der berechnete Gesamtyield (Umsatz / BMV), ungewichtet.</description>
        <formula>MT_TotalRevenue__c /  MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Die Anzahl verkaufter Einheiten der Umsatzbeteiligungskomponente 1 in diesem Monat. Wird im Businessplan eingetragen.</description>
        <label>Var. Umsatz 1 - Verkaufte Einheiten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_TotalRevenue__c</fullName>
        <description>Der berechnete Gesamtumsatz der Umsatzbeteiligungskomponente 1 in diesem Monat.</description>
        <formula>MT_VariableRevenue1_SoldAmount__c * MT_MediaCampaign_ref__r.MT_VariableRevenue1_RevenuePerUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 1 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_Yield__c</fullName>
        <description>Der berechnete Yield der Umsatzbeteiligungskomponente 1.</description>
        <formula>MT_VariableRevenue1_TotalRevenue__c / MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Variabler Umsatz 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Die Anzahl verkaufter Einheiten der Umsatzbeteiligungskomponente 2 in diesem Monat. Wird im Businessplan eingetragen.</description>
        <label>Var. Umsatz 2 - Verkaufte Einheiten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_TotalRevenue__c</fullName>
        <description>Der berechnete Gesamtumsatz der Umsatzbeteiligungskomponente 2 in diesem Monat.</description>
        <formula>MT_VariableRevenue2_SoldAmount__c * MT_MediaCampaign_ref__r.MT_VariableRevenue2_RevenuePerUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 2 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_Yield__c</fullName>
        <description>Der berechnete Yield der Umsatzbeteiligungskomponente 2.</description>
        <formula>MT_VariableRevenue2_TotalRevenue__c / MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Variabler Umsatz 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Die Anzahl verkaufter Einheiten der Umsatzbeteiligungskomponente 3 in diesem Monat. Wird im Businessplan eingetragen.</description>
        <label>Var. Umsatz 3 - Verkaufte Einheiten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_TotalRevenue__c</fullName>
        <description>Der berechnete Gesamtumsatz der Umsatzbeteiligungskomponente 3 in diesem Monat.</description>
        <formula>MT_VariableRevenue3_SoldAmount__c * MT_MediaCampaign_ref__r.MT_VariableRevenue3_RevenuePerUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 3 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_Yield__c</fullName>
        <description>Der berechnete Yield der Umsatzbeteiligungskomponente 3.</description>
        <formula>MT_VariableRevenue3_TotalRevenue__c / MT_TotalBMV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield Variabler Umsatz 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Year__c</fullName>
        <description>Zahldarstellung des Jahres (ohne Monat). Wird in Custom Seiten (Businessplan, Flightplan) in JS verwendet.</description>
        <formula>YEAR(MT_PlanningDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Campaign Monthly Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MBBMPL{00000}</displayFormat>
        <label>Media Building Block Monthly Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Campaign Monthly Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MT_BMV_Sponsoring_MUST_BE_POSITIVE</fullName>
        <active>true</active>
        <errorConditionFormula>MT_BMVSponsoring__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_BMVSponsoring__c</errorDisplayField>
        <errorMessage>BMV Sponsoring cannot be less then 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BMW_Spot_MUST_BE_POSSITIVE</fullName>
        <active>true</active>
        <errorConditionFormula>MT_BMVSpot__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_BMVSpot__c</errorDisplayField>
        <errorMessage>BMV Spot cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_FIX_Revenue_MUST_BE_POSITIVE</fullName>
        <active>true</active>
        <errorConditionFormula>MT_FixRevenue__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_FixRevenue__c</errorDisplayField>
        <errorMessage>Fix Revenue cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_IsMonthInContractRuntime</fullName>
        <active>true</active>
        <description>Determines if the Month is in between the Start and End Date of this Contract (defined on the opportunity approval)</description>
        <errorConditionFormula>OR(
DATE(YEAR(MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeStart__c),MONTH(MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeStart__c),1) &gt; DATE(YEAR(MT_PlanningDate__c),MONTH(MT_PlanningDate__c),1),
DATE(YEAR(MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeEnd__c),MONTH(MT_MediaCampaign_ref__r.MT_Sys_ContractOrTVRuntimeEnd__c),1) &lt; DATE(YEAR(MT_PlanningDate__c),MONTH(MT_PlanningDate__c),1)
)</errorConditionFormula>
        <errorDisplayField>MT_PlanningDate__c</errorDisplayField>
        <errorMessage>Der Monat befindet sich außerhalb des Vertragszeitraumes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_OverbookingFlights_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_NoOverbookingFlights__c &gt; 5</errorConditionFormula>
        <errorMessage>Only 5 Overbooking Flights can be created per month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_Probability_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_Probability__c &lt; 0 || MT_Probability__c &gt; 1</errorConditionFormula>
        <errorDisplayField>MT_Probability__c</errorDisplayField>
        <errorMessage>Value must be between 0% and 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_ROIYield_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_ROI_Yield__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_ROI_Yield__c</errorDisplayField>
        <errorMessage>Value cannot be lower than 0%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_SponsoringFlights_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_NoSponsoringFlights__c &gt; 20</errorConditionFormula>
        <errorMessage>Only 20 Sponsoring Flights can be created per month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_Monthly_SpotFlights_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>MT_NoSpotFlights__c &gt; 5</errorConditionFormula>
        <errorMessage>Only 5 Spot Flights can be created per month</errorMessage>
    </validationRules>
</CustomObject>